[package]
name = "ProjetDL"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "algorithms",
    "environments"
]

[dependencies]
algorithms = { path = "algorithms" }
environments = { path = "environments" }
rand = "0.9.0"
rand_xoshiro = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.dependencies]
rand = "0.9.0"
rand_xoshiro = "0.7.0"